# finspark

./: README.md
backend/: .coverage  .dockerignore  .env  Dockerfile  debug_env_check.py  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  sandbox.db  verify_setup.py
backend/.github/workflows/: build.yml  test.yml
backend/app/: __init__.py
backend/app/config/: settings.py
backend/app/middleware/: __init__.py  auth_middleware.py  logging_middleware.py  rate_limit_middleware.py  security_headers_middleware.py
backend/app/models/: __init__.py  account.py  attestation_token.py  base.py  contract.py  incident.py  invoice.py  security_log.py  ticket.py  user.py
backend/app/routes/: __init__.py  agent.py  analytics.py  auth.py  crypto.py  dashboard.py  database.py  deception.py
backend/app/schemas/: __init__.py  auth.py  request.py  response.py
backend/app/services/: __init__.py  access_control.py  database.py  honey_detector.py  hsm.py  jwt_manager.py  schema_validator.py  token_manager.py
backend/database/: ENGINE_SETUP.md  __init__.py  engine.py  init_db.py  seed_postgres.py  seed_sqlite.py
backend/docs/: DEPLOYMENT.md
backend/tests/: conftest.py  test_engine.py
backend/tests/integration/: test_endpoints.py
backend/tests/unit/: test_access_control.py  test_schema_validator.py  test_token_manager.py
frontend/: .env.example  metadata.json  pyproject.toml
frontend/app/: __init__.py  config.py  database.py
frontend/app/models/: __init__.py  account.py  attestation_token.py  base.py  contract.py  invoice.py  sandbox.py  security_log.py  ticket.py  user.py
frontend/app/schemas/: __init__.py  attestation.py  database_query.py  tool_call.py
frontend/database/: sandbox_seed.py
frontend/src/: App.tsx  constants.ts  index.css  types.ts
frontend/src/components/: Footer.tsx  Navbar.tsx  ParticleBackground.tsx
frontend/src/pages/: About.tsx  Analytics.tsx  Architecture.tsx  Assistant.tsx  Dashboard.tsx  Documentation.tsx  HoneyTable.tsx  Landing.tsx  Simulation.tsx  Team.tsx  TokenGen.tsx
