[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-sec-standalone"
version = "1.0.0"
description = "Zero-trust runtime safety framework for AI agent database access"
authors = [{name = "RAG-Sec Team"}]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
keywords = ["ai-security", "agentic-applications", "zero-trust", "database-firewall"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "cryptography>=41.0.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = ["black>=23.0", "flake8>=6.0", "mypy>=1.7", "isort>=5.13"]
test = ["pytest>=7.4", "pytest-asyncio>=0.21", "pytest-cov>=4.1", "httpx>=0.25"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''/(database|migrations)/'''

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=html --cov-report=term-missing"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "database", "migrations"]

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
