[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-sec-standalone"
version = "1.0.0"
description = "Zero-trust runtime safety framework for AI agent database access"
readme = "README_BACKEND.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "RAG-Sec Team"}
]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "asyncpg==0.29.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "cryptography==41.0.7",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
    "black==23.12.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
